fix: fixes the default dark mode styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,1 @@
-:root {
-    --max-width: 1100px;
-    --border-radius: 12px;
-    --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono', 'Roboto Mono',
-        'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro', 'Fira Mono', 'Droid Sans Mono',
-        'Courier New', monospace;
-}
-
-/* * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-} */
-
-html,
-body {
-    max-width: 100vw;
-    overflow-x: hidden;
-    background: #000;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-    html {
-        color-scheme: dark;
-    }
-}
-
 @layer reset, base, tokens, recipes, utilities;
